[package]
name = "witnet-vanity"
version = "0.1.0"
description = "A simple CLI tool to generate Witnet vanity addresses written in Rust."
keywords = ["witnet", "crypto", "address", "vanity", "generator"]
repository = "https://github.com/stampery-labs/witnet-vanity"
authors = ["Stampery Labs"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
bech32 = "0.7.2"
clap = "2.33.1"
digest = "0.8.1"
indicatif = "0.14.0"
num_cpus = "1.13.0"
number_prefix = "0.4.0"
secp256k1 = { version = "0.17.2", features = ["rand-std"] }
sha2 = "0.8.2"
